--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-player": "^2.10.0",
+    "react-select": "^5.7.5",
     "reactstrap": "^9.0.2",
     "sass": "^1.50.1",
     "swr": "^1.3.0"
